--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   intl: ^0.18.1
   sqflite_common_ffi: ^2.3.0
 
+  flutter_local_notifications: ^19.3.1
+  timezone: ^0.10.1
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
