--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,14 +30,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   sqflite: ^2.3.0
   path: ^1.8.3
   path_provider: ^2.1.1
-  intl: ^0.18.1
+  intl: ^0.19.0
   sqflite_common_ffi: ^2.3.0
 
   flutter_local_notifications: ^19.3.1
   timezone: ^0.10.1
+  provider: ^6.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
